# Joe-Engine

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  GameEngine.sln  JoeEngineConfig.h.in  README.md  appveyor.yml  travis.yml
GameEngine/: GameEngine.vcxproj  GameEngine.vcxproj.filters
GameEngine/src/: Common.cpp  Common.h  EngineApplication.cpp  EngineApplication.h  GlobalInfo.h  VulkanValidationLayers.cpp  VulkanValidationLayers.h  main.cpp
GameEngine/src/io/: IOHandler.cpp  IOHandler.h
GameEngine/src/physics/: PhysicsManager.cpp  PhysicsManager.h
GameEngine/src/rendering/: Camera.h  Mesh.cpp  Mesh.h  Renderer.cpp  Texture.cpp  Texture.h  VulkanDepthBuffer.cpp  VulkanDepthBuffer.h  VulkanDevice.cpp  VulkanDevice.h  VulkanQueue.cpp  VulkanQueue.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanShader.cpp  VulkanShader.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanWindow.cpp  VulkanWindow.h
GameEngine/src/scene/: Camera.h  MeshDataManager.cpp  MeshDataManager.h  SceneManager.cpp  SceneManager.h
GameEngine/src/scripts/: compileShaders.bat
GameEngine/src/shaders/: frag_basic.frag  frag_deferred_geom.frag  frag_deferred_lighting.frag  frag_mesh.frag  frag_post_grayscale.frag  vert_basic.vert  vert_deferred_geom.vert  vert_deferred_lighting.vert  vert_mesh.vert  vert_passthrough.vert  vert_shadow.vert
GameEngine/src/utils/: Common.cpp  Common.h  ThreadPool.cpp  ThreadPool.h  VulkanValidationLayers.cpp  VulkanValidationLayers.h
Libraries/VulkanSDK/1.1.82.1/Demos/: DEMOS.sln  cube.frag.inc  cube.vcxproj  cube.vert.inc  cubepp.vcxproj  demo_layer.vcxproj  vulkaninfo.vcxproj
Libraries/VulkanSDK/1.1.82.1/Documentation/: api_dump_layer.html  assistant_layer.html  core_validation_layer.html  device_simulation_layer.html  getting_started.html  index.html  layer_configuration.html  layer_factory.html  loader_and_layer_interface.html  monitor_layer.html  object_tracker_layer.html  parameter_validation_layer.html  release_notes.html  screenshot_layer.html  sdk_license.html  spirv_toolchain.html  threading_layer.html  trace_tools.html  unique_objects_layer.html  utility_layers.html  validation_layers.html  via.html  vktrace.html  vulkan_samples.html  vulkan_tools_frame.html  vulkaninfo.html
Libraries/VulkanSDK/1.1.82.1/Documentation/Vulkan Documentation/: API Specification.lnk  Device Simulation.lnk  FAQ.lnk  Getting Started.lnk  Index.lnk  Layer Configuration.lnk  Layer Factory.lnk  Loader And Layer Interface.lnk  Release Notes.lnk  SPIRV Optimization.lnk  SPIRV Toolchain.lnk  Samples Index.lnk  Trace Tools.lnk  Tutorial.lnk  Via.lnk  Vulkan Samples.lnk  Vulkan Specification.lnk  Vulkan Tools Framework.lnk
Libraries/VulkanSDK/1.1.82.1/LayerFactory/: create_vlf_files.bat  layer_factory.cpp  layer_factory.h
Libraries/VulkanSDK/1.1.82.1/LayerFactory/Project/: layer_factory.vcxproj  vk_extension_helper.h  vk_object_types.h
Libraries/VulkanSDK/1.1.82.1/Lib32/: VkLayer_api_dump.lib  VkLayer_core_validation.lib  VkLayer_device_simulation.lib  VkLayer_monitor.lib  VkLayer_object_tracker.lib  VkLayer_parameter_validation.lib  VkLayer_screenshot.lib  VkLayer_threading.lib  VkLayer_unique_objects.lib  VkLayer_utils.lib
Libraries/VulkanSDK/1.1.82.1/Samples/: Tutorial.lnk
Libraries/VulkanSDK/1.1.82.1/Source/layers/: api_dump.cpp  api_dump_html.h  api_dump_text.h  object_tracker.cpp  parameter_validation.cpp  spirv_tools_commit_id.h  thread_check.h  unique_objects_wrappers.h  vk_dispatch_table_helper.h  vk_safe_struct.cpp  vk_safe_struct.h
Libraries/VulkanSDK/1.1.82.1/Source/lib/: VkLayer_api_dump.lib  VkLayer_assistant_layer.json  VkLayer_assistant_layer.lib  VkLayer_core_validation.lib  VkLayer_monitor.lib  (+6 more)
Libraries/VulkanSDK/1.1.82.1/glslang/: known_good.json
Libraries/pcm/: cpucounters.h
Libraries/pcm/WinMSRDriver/Win7/: MSR.vcxproj
Source/: Doxyfile  EngineApplication.cpp  EngineInstance.cpp  EngineInstance.h  main.cpp
Source/Components/: ComponentManager.cpp  ComponentManager.h
Source/Components/Material/: MaterialComponent.cpp  MaterialComponent.h  MaterialComponentManager.cpp  MaterialComponentManager.h
Source/Components/Mesh/: MeshComponent.cpp  MeshComponent.h  MeshComponentManager.cpp  MeshComponentManager.h
Source/Components/Rotator/: RotatorComponent.cpp  RotatorComponent.h  RotatorComponentManager.cpp  RotatorComponentManager.h
Source/Components/Transform/: TransformComponent.cpp  TransformComponent.h  TransformComponentManager.cpp  TransformComponentManager.h
Source/Containers/: PackedArray.cpp  PackedArray.h
Source/Io/: IOHandler.cpp  IOHandler.h
Source/Physics/: ParticleSystem.cpp  ParticleSystem.h  PhysicsManager.cpp  PhysicsManager.h
Source/Rendering/: MeshBufferManager.cpp  MeshBufferManager.h  ShaderManager.cpp  ShaderManager.h  Texture.cpp  Texture.h  TextureLibrary.cpp  TextureLibrary.h  VulkanDescriptor.cpp  VulkanDescriptor.h  VulkanQueue.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanRenderingTypes.h  VulkanShader.cpp  VulkanShader.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanWindow.cpp  VulkanWindow.h
Source/Scene/: Camera.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  MeshDataManager.cpp  MeshDataManager.h  SceneManager.cpp  SceneManager.h
Source/Scripts/: CheckHWCapabilities.cmake  compileShaders.bat  compileShaders.sh  compileShaders_nonBuild.bat
Source/Shaders/: frag_deferred_geom.frag  frag_deferred_geom_new.frag  frag_deferred_lighting.frag  frag_deferred_lighting_new.frag  frag_deferred_lighting_new_no_shadows.frag  frag_flat.frag  frag_forward.frag  frag_forward_new.frag  frag_forward_new_no_shadows.frag  frag_forward_new_oit.frag  frag_mesh.frag  frag_oit_sort.frag  frag_points.frag  frag_post_blit.frag  frag_post_chromatic_aberration.frag  vert_deferred_geom.vert  vert_deferred_lighting.vert  vert_flat.vert  vert_forward.vert  vert_mesh.vert  vert_oit.vert  vert_points.vert  vert_shadow.vert
Source/Utils/: Common.cpp  Common.h  MemAllocUtils.cpp  MemAllocUtils.h  RandomNumberGen.cpp  RandomNumberGen.h  ScopedTimer.cpp  ScopedTimer.h  ThreadPool.cpp  ThreadPool.h  VulkanValidationLayers.h
(+15 files in other folders)
